--- a/src/i18n/resources/ar.json
+++ b/src/i18n/resources/ar.json
@@ -1,10 +1,56 @@
 {
-  "brand": "أواسس بوك",
-  "nav": { "home": "الرئيسية", "listings": "العروض" },
-  "actions": { "book": "احجز الآن", "theme": "المظهر", "lang": "اللغة" },
+  "brand": "OasisBook",
+  "nav": {
+    "home": "الرئيسية",
+    "listings": "الأماكن"
+  },
+  "actions": {
+    "book": "ابحث",
+    "theme": "المظهر",
+    "lang": "اللغة"
+  },
   "home": {
     "title": "ابحث عن مسابح ومخيمات في البحرين",
-    "subtitle": "أماكن موثوقة لعطلة نهاية الأسبوع. احجز خلال دقائق."
+    "subtitle": "تصفّح أماكن موثوقة واحجز خلال دقائق.",
+    "search_placeholder": "ابحث عن مسبح، مخيم، أو منطقة",
+    "featured": "المميّزة هذا الأسبوع",
+    "categories": "التصنيفات",
+    "featured_pools": "أشهر المسابح",
+    "featured_camps": "أشهر المخيمات",
+    "how": "كيف تعمل الخدمة",
+    "how.search": "ابحث",
+    "how.search_sub": "اعثر على مسبح أو مخيم حسب المنطقة والتاريخ.",
+    "how.pick": "اختر المكان",
+    "how.pick_sub": "شاهد الصور والمميزات والقواعد.",
+    "how.book": "احجز",
+    "how.book_sub": "احجز فورًا. الدفع عند التأكيد.",
+    "cta.title": "جاهز لعطلة نهاية الأسبوع؟",
+    "cta.sub": "تصفح جميع الأماكن واختر موقعك المثالي.",
+    "cta.btn": "استكشف الأماكن"
   },
-  "listings": { "title": "الأماكن المتاحة", "pool": "مسبح", "camp": "مخيم" }
+  "listings": {
+    "title": "الأماكن المتاحة",
+    "pool": "مسبح",
+    "camp": "مخيم",
+    "sort": {
+      "relevant": "الترتيب: الأكثر صلة",
+      "low": "السعر: من الأقل إلى الأعلى",
+      "high": "السعر: من الأعلى إلى الأقل"
+    },
+    "empty": "لا توجد نتائج. جرّب فلاتر مختلفة."
+  },
+  "footer": {
+    "tagline": "احجز المسابح والمخيمات في البحرين ببحث سريع وأسعار واضحة.",
+    "explore": "استكشف",
+    "company": "الشركة",
+    "about": "من نحن",
+    "contact": "تواصل",
+    "terms": "الشروط",
+    "privacy": "الخصوصية",
+    "help": "المساعدة",
+    "faq": "الأسئلة الشائعة",
+    "support": "الدعم",
+    "hosts": "انضم كمضيف",
+    "madein": "من تطوير"
+  }
 }
