--- a/src/i18n/resources/ar.json
+++ b/src/i18n/resources/ar.json
@@ -2,7 +2,8 @@
   "brand": "OasisBook",
   "nav": {
     "home": "الرئيسية",
-    "listings": "الأماكن"
+    "listings": "الأماكن",
+    "about": "من نحن"
   },
   "actions": {
     "book": "ابحث",
@@ -52,5 +53,35 @@
     "support": "الدعم",
     "hosts": "انضم كمضيف",
     "madein": "من تطوير"
+  },
+  "about": {
+    "title": "عن OasisBook",
+    "subtitle": "منصّة بحرينية لحجز المسابح الخاصة والمخيمات الصحراوية.",
+    "mission": {
+      "title": "مهمّتنا",
+      "body": "نجعل التخطيط لعطلة نهاية الأسبوع في البحرين أسهل وأوضح وأسرع، لتقضي العائلة والأصدقاء وقتًا أطول في الاستمتاع وأقل في التنسيق.",
+      "point1": "قوائم موثوقة مع صور واضحة وقواعد محددة",
+      "point2": "أسعار ظاهرة وطلبات فورية",
+      "point3": "دعم بالعربية والإنجليزية"
+    },
+    "how": {
+      "title": "كيف تعمل OasisBook",
+      "step1": "ابحث حسب المنطقة والتاريخ والنوع (مسبح أو مخيم).",
+      "step2": "قارن الصور والمزايا والقواعد والتقييمات.",
+      "step3": "أرسل طلب الحجز واحصل على التأكيد بسرعة."
+    },
+    "stats": {
+      "listings": "50+",
+      "listings_label": "عدد الأماكن (يتزايد)",
+      "areas": "10+",
+      "areas_label": "مناطق في البحرين",
+      "languages": "٢",
+      "languages_label": "اللغات المدعومة"
+    },
+    "cta": {
+      "title": "هل أنت مضيف؟",
+      "sub": "أضف مسبحك أو مخيمك ووصل إلى الضيوف الجاهزين لعطلتهم.",
+      "btn": "انضم كمضيف"
+    }
   }
 }
