all pages created

--- a/src/i18n/resources/ar.json
+++ b/src/i18n/resources/ar.json
@@ -3,7 +3,8 @@
   "nav": {
     "home": "الرئيسية",
     "listings": "الأماكن",
-    "about": "من نحن"
+    "about": "من نحن",
+    "contact": "تواصل معنا"
   },
   "actions": {
     "book": "ابحث",
@@ -83,5 +84,47 @@
       "sub": "أضف مسبحك أو مخيمك ووصل إلى الضيوف الجاهزين لعطلتهم.",
       "btn": "انضم كمضيف"
     }
+  },
+  "contact": {
+    "title": "تواصل معنا",
+    "subtitle": "عندك سؤال أو ملاحظات أو شراكة؟ أرسل رسالة.",
+    "name": "الاسم الكامل",
+    "phone": "رقم الهاتف",
+    "email": "البريد الإلكتروني",
+    "subject": "الموضوع",
+    "message": "الرسالة",
+    "response_hint": "نرد عادة خلال 24 ساعة.",
+    "send": "أرسل الرسالة",
+    "sending": "جارٍ الإرسال…",
+    "sent": "شكرًا. تم إرسال رسالتك.",
+    "email_label": "البريد الإلكتروني",
+    "whatsapp": "واتساب",
+    "instagram": "إنستغرام",
+    "faq": "الأسئلة الشائعة",
+    "faq_hint": "اطّلع على الأسئلة والأجوبة المتكررة."
+  },
+  "faq": {
+    "title": "الأسئلة الشائعة",
+    "subtitle": "أكثر الأسئلة تكرارًا حول الحجز والدفع والاستضافة.",
+    "search": "ابحث في الأسئلة",
+    "all": "كل التصنيفات",
+    "booking": "الحجز",
+    "payments": "المدفوعات",
+    "hosting": "الاستضافة",
+    "account": "الحساب",
+    "q1": "كيف أحجز مسبحًا أو مخيمًا؟",
+    "a1": "افتح الصفحة، اختر التاريخ والوقت، ثم أرسل طلب الحجز. ستصلك رسالة تأكيد عبر SMS أو البريد.",
+    "q2": "كيف يتم تحديد الأسعار؟",
+    "a2": "المضيفون يحددون أسعارهم. قد تُضاف رسوم نظافة أو خدمة وستظهر قبل الإرسال.",
+    "q3": "هل يمكنني الإلغاء أو تغيير الموعد؟",
+    "a3": "لكل مكان سياسة خاصة. اطلع على السياسة في صفحة المكان قبل الحجز.",
+    "q4": "هل أحتاج إلى حساب للحجز؟",
+    "a4": "نعم. إنشاء حساب يتيح لك متابعة الطلبات والرسائل والإيصالات.",
+    "q5": "أرغب في إضافة مكاني كمضيف.",
+    "a5": "اذهب إلى \"انضم كمضيف\"، أضف الصور والقواعد والأسعار ثم انشر. نراجع القوائم بسرعة.",
+    "q6": "ما طرق الدفع المتاحة؟",
+    "a6": "ندعم الطرق المحلية الشائعة وبطاقات الدفع. بعض الأماكن تقبل الدفع عند التأكيد.",
+    "q7": "هل يوجد دعم عملاء؟",
+    "a7": "نعم. تواصل عبر واتساب أو نموذج الاتصال للحالات العاجلة."
   }
 }
