--- a/src/i18n/resources/ar.json
+++ b/src/i18n/resources/ar.json
@@ -126,5 +126,35 @@
     "a6": "ندعم الطرق المحلية الشائعة وبطاقات الدفع. بعض الأماكن تقبل الدفع عند التأكيد.",
     "q7": "هل يوجد دعم عملاء؟",
     "a7": "نعم. تواصل عبر واتساب أو نموذج الاتصال للحالات العاجلة."
+  },
+  "list": {
+    "back": "الرجوع إلى الأماكن",
+    "not_found": "المكان غير موجود."
+  },
+  "detail": {
+    "about": "نبذة عن المكان",
+    "about_body": "مكان مريح وخاص مناسب للعائلات، مع مرافق نظيفة وقواعد واضحة. تتم مشاركة العنوان بعد التأكيد.",
+    "amenities": "المرافق",
+    "amenity": {
+      "parking": "موقف خاص",
+      "bbq": "منطقة شواء",
+      "seating": "جلسات خارجية",
+      "bath": "حمام/غرفة تبديل"
+    },
+    "rules": "القواعد",
+    "rule": {
+      "id": "قد يُطلب إبراز الهوية عند الدخول",
+      "guests": "احترام عدد الضيوف والوقت",
+      "clean": "حافظ على النظافة ولا زجاج قرب المسبح"
+    },
+    "book": "طلب حجز",
+    "book_hint": "اختر التاريخ والوقت. سنؤكد التوفر سريعًا.",
+    "slot": {
+      "morning": "الصباح",
+      "afternoon": "المساء المبكر",
+      "evening": "المساء"
+    },
+    "request": "إرسال الطلب",
+    "note": "لن يتم الدفع الآن. يتم التأكيد من المضيف أولًا."
   }
 }
