--- a/src/i18n/resources/ar.json
+++ b/src/i18n/resources/ar.json
@@ -156,5 +156,14 @@
     },
     "request": "إرسال الطلب",
     "note": "لن يتم الدفع الآن. يتم التأكيد من المضيف أولًا."
+  },
+  "404": {
+    "title": "الصفحة غير موجودة",
+    "sub": "الصفحة التي تبحث عنها غير متاحة أو تم نقلها.",
+    "home": "العودة للرئيسية",
+    "explore": "تصفح الأماكن",
+    "contact": "تواصل معنا",
+    "faq": "اقرأ الأسئلة الشائعة",
+    "code": "رمز الخطأ: 404 — غير موجود"
   }
 }
